<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/first_card"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/asap"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="35sp" />

            <LinearLayout
                android:id="@+id/infButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="20dp"
                android:background="@drawable/riple"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_perm_device_information_white_24" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/instructions"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/changelogButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/infButton"
                android:layout_marginTop="10dp"
                android:background="@drawable/riple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_history_white_24" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/changelog"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/source_code_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/changelogButton"
                android:layout_marginTop="10dp"
                android:background="@drawable/riple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/github" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/source_code"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/first_card"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorPrimaryDark">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <LinearLayout
               android:id="@+id/donation_button"
               android:layout_width="match_parent"
               android:layout_height="56dp"
               android:layout_marginTop="5dp"
               android:background="@drawable/riple"
               android:clickable="true"
               android:focusable="true"
               android:orientation="horizontal">

               <ImageButton
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_marginLeft="8dp"
                   android:background="@android:color/transparent"
                   android:src="@drawable/baseline_attach_money_white_24" />

               <TextView
                   android:id="@+id/textView8"
                   style="@style/textStyle"
                   android:layout_width="wrap_content"
                   android:layout_height="40dp"
                   android:layout_marginLeft="16dp"
                   android:layout_weight="1"
                   android:gravity="center_vertical"
                   android:text="@string/donation"
                   android:textSize="14sp" />
           </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutus_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/donation_button"
            android:layout_marginTop="10dp"
            android:background="@drawable/riple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_info_white_24" />

            <TextView
                android:id="@+id/textView9"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/aboutUs"
                android:textSize="14sp" />
        </LinearLayout>
       </RelativeLayout>
    </android.support.design.card.MaterialCardView>

</RelativeLayout>